<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/text"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_product_name_here" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/text"
            android:text="@string/price" />

        <EditText
            android:id="@+id/price"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/text"
            android:text="@string/supplier_name" />

        <EditText
            android:id="@+id/supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_name_here" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/text"
            android:text="@string/supplier_number" />

        <EditText
            android:id="@+id/supplier_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_number_here"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            style="@style/text"
            android:text="@string/quantity" />
        <ImageButton
            android:id="@+id/sub"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:focusableInTouchMode="true"
            android:scaleType="fitCenter"
            android:src="@drawable/sub" />
        <EditText
            android:id="@+id/quantity"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="number" />
        <ImageButton
            android:id="@+id/add"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:focusableInTouchMode="true"
            android:scaleType="fitCenter"
            android:src="@drawable/add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Order" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>
